	Quests:
		Added a glow to the corresponding button during the "Dead Drop" quest in Bastion.
		Added a glow to the corresponding button during the "Just Winging It" world quest in Maldraxxus.
		Added a glow to the corresponding button during the "We'll Make an Aspirant Out of You" world quest in Bastion.
	Dialog:
		Added a dialog to skip the Covenant introduction for Night Fae.
		Added a dialog for the NPCs involved in the "Insider Trading" quest in Oribos.
		Added a dialog for Archivist Roh-Suir in Korthia.
		Added dialogs for 1 or more NPCs in Bastion.
		Added dialogs for 1 or more NPCs in Ardenweald.
		Added dialogs for 1 or more NPCs in Revendreth.
		Added dialogs for 1 or more NPCs in Maldraxxus.
		Added multiple dialogs for the Stewards involved in the "A Steward for Every Occasion" world quest in Bastion.
		Added multiple dialogs for NPCs involved in the Night Fae Campaign.
		Added multiple dialogs for Ve'rayn.
		Added multiple dialogs for Shandris Feathermoon.
		Added dialogs for multiple NPCs in Torghast.
		Added dialogs for multiple NPCs in the Maw for the Night Fae assault.
		Added dialogs for multiple NPCs in the Maw for the Kyrian assault.
		Added dialogs for NPCs in Argus zones.
		Added support for more Stable Masters (and healing battle pets.)
	Options:
		Added an option to control Notes on tooltips.
		When opening the options, the player's chosen expansion for Chromie Time will show in the edit box.
		The "Garrison Tables" option now also controls the automation of outpost selection in Gorgrond, Talador, and Spires of Arak.
		The "Adventure Maps" option now also controls Hero's Call Board automation.
	Notes:
		Added a note for exposing the Exposed Boggarts during the "Tough Crowd" world quest in Ardenweald.
	Fixes:
		Fixed an issue where sometimes the merchant ID would be nil and toss an error.
		Fixed an issue that caused the merchant window to open when speaking with Stable Masters.