@@ -10,11 +10,11 @@ e:SetScript("OnEvent", function(self, event, ...)
 		local numTrainerServices = GetNumTrainerServices()
 		if numTrainerServices > 0 then
 			for i = 1, numTrainerServices do
-				if GetTrainerServiceSkillLine(i) == L["Riding"] then
-					if GetMoney() > (tonumber(GetTrainerServiceCost(i)+3000000)) or GetMoney() > (tonumber(GetTrainerServiceCost(i)*2)) then
-						-- If the player has at least twice the amount of cost for the Riding training, then buy it.
-						BuyTrainerService(i)
-					end
+				if GetMoney() > (tonumber(GetTrainerServiceCost(i)+3000000)) or GetMoney() > (tonumber(GetTrainerServiceCost(i)*2)) then
+					-- If the player has at least twice the
+					-- amount of cost for the training, then
+					-- buy it.
+					BuyTrainerService(i)
 				end
 			end
 		end
